--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "packageManager": "pnpm@9.1.2",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/base": "5.0.0-beta.62",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
